--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ html, body {
 }
 
 /* Images */
-.justificativa-img, .slide-image {
+.justificativa-img, .slide-image, .intro-img {
   width: 45%;
   max-width: 600px;
   height: auto;
@@ -174,6 +174,16 @@ html, body {
   object-fit: cover;
   border-radius: var(--radius-md);
   box-shadow: var(--shadow-md);
+}
+
+/* Slide 3 specific */
+.slide[data-index="2"] .content-wrap {
+  align-items: flex-start;
+}
+
+.slide[data-index="2"] .intro-img {
+  margin-top: 40px;
+  align-self: center;
 }
 
 /* Headings */
@@ -597,7 +607,7 @@ p {
     gap: 40px;
   }
   
-  .justificativa-img, .slide-image {
+  .justificativa-img, .slide-image, .intro-img {
     width: 40%;
   }
   
@@ -615,7 +625,7 @@ p {
     padding: 40px;
   }
   
-  .justificativa-img, .slide-image {
+  .justificativa-img, .slide-image, .intro-img {
     width: 45%;
     max-height: 70vh;
   }
@@ -646,7 +656,7 @@ p {
     max-width: 100%;
   }
   
-  .justificativa-img, .slide-image {
+  .justificativa-img, .slide-image, .intro-img {
     width: 100%;
     max-width: 100%;
     max-height: 300px;
@@ -704,6 +714,15 @@ p {
   .logo-container {
     max-width: 250px;
   }
+  
+  .slide[data-index="2"] .content-wrap {
+    flex-direction: column-reverse;
+  }
+  
+  .slide[data-index="2"] .intro-img {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -747,5 +766,9 @@ p {
   
   .project-images {
     gap: 10px;
+  }
+  
+  .slide[data-index="2"] .intro-img {
+    max-height: 250px;
   }
 }
